syntax = "proto3";

package author;

service AuthorService {
  rpc FindOne (AuthorById) returns (Author) {}
}

message AuthorById {
  string id = 1;
}

message Author {
  string id = 1;
  string name = 2;
}